--- a/package.json
+++ b/package.json
@@ -12,15 +12,31 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
+    "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.2",
     "sequelize": "^6.32.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
+    "@types/node-schedule": "^2.1.0",
+    "@types/nodemailer": "^6.4.9",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
     "@types/pg": "^8.10.2",
     "@types/sequelize": "^4.28.15",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
